@@ -26,15 +26,15 @@
 #' @param gdalPath \code{character}. Path to gdal bin directory and more 
 #' relevant for Windows users. Use \code{MODIS:::checkTools("GDAL")} to try to 
 #' detect it automatically.
-#' @param MODISserverOrder \code{character}. Possible options are \code{"LAADS"}
-#' (default) and \code{"LPDAAC"} (see 'dlmethod' and 'Details'). If only one 
+#' @param MODISserverOrder \code{character}. Possible options are \code{"LPDAAC"}
+#' (default) and \code{"LAADS"} (see 'dlmethod' and 'Details'). If only one 
 #' server is selected, all efforts to download data from the second server 
-#' available are inhibited.
+#' are inhibited.
 #' @param dlmethod \code{character}, defaults to \code{auto}. See 'method' in 
 #' \code{\link{download.file}}. On Unix (also Mac?), it is suggested to use 
 #' \code{"wget"} or, if installed, \code{"aria2"} (supports multi source download).
-#' In order to download MODIS files from LP DAAC and NSIDC, please note that either
-#' wget (default) or curl must be installed and made available through the PATH 
+#' Be aware that in order to download files from any server, either wget (default) 
+#' or curl must be installed and made available through the system's PATH 
 #' environmental variable.
 #' @param stubbornness \code{numeric}. The number of retries after the target 
 #' server has refused a connection. Higher values increase the chance of getting 
@@ -104,8 +104,8 @@
 #' to HTTP (May 2013), \code{dlmethod = 'auto'} seems not to work properly. On 
 #' Windows, on the other hand, \code{dlmethod = 'auto'} seems to work fine. 
 #' 
-#' Please note that in order to download MODIS files from LP DAAC and NSIDC, you 
-#' are required to register for an Earthdata Login Profile 
+#' Please note that in order to download MODIS files from any available server, 
+#' you are required to register for an Earthdata Login Profile 
 #' (\url{https://urs.earthdata.nasa.gov/users/new}) and create a read-only 
 #' .netrc file in your home directory containing the Earthdata server address as 
 #' well as your login credentials. An automated solution for the creation of a 
@@ -310,7 +310,7 @@ MODISoptions <- function(localArcPath, outDirPath, pixelSize, outProj,
   
   if(is.null(opt$MODISserverOrder))
   {
-    opt$MODISserverOrder <- c("LAADS", "LPDAAC")
+    opt$MODISserverOrder <- c("LPDAAC", "LAADS")
   }
   if (!missing(MODISserverOrder))
   {
